[gd_scene format=3 uid="uid://exaws1jgbyi6"]

[ext_resource type="Script" uid="uid://d28a1gihixqie" path="res://DebugSampleGames/Scripts/MicroGameRoot.gd" id="1_kfb5p"]
[ext_resource type="Script" uid="uid://c1r4tn66ual54" path="res://Frameworks(YourStuff)/Jude/MixColors/MixColorgame.gd" id="2_utxgy"]
[ext_resource type="Script" uid="uid://qankqaj8u8s0" path="res://Frameworks(YourStuff)/Jude/ShakeColors/ui.gd" id="4_htx8l"]
[ext_resource type="Texture2D" uid="uid://b0qp2gfkx3prp" path="res://Frameworks(YourStuff)/Jude/ShakeColors/download_5.png" id="5_skyad"]
[ext_resource type="Script" uid="uid://c5eimqoe6yavx" path="res://Frameworks(YourStuff)/Jude/ShakeColors/mixer_bod.gd" id="6_kfb5p"]
[ext_resource type="Texture2D" uid="uid://duxckfeqf8eov" path="res://Frameworks(YourStuff)/Jude/ShakeColors/spraycan.png" id="7_kinar"]
[ext_resource type="AudioStream" uid="uid://d2xf13c8te4c2" path="res://Frameworks(YourStuff)/Jude/ShakeColors/interactiveshaking.wav" id="8_wcj5c"]
[ext_resource type="Script" uid="uid://bhcwkndagc1va" path="res://Frameworks(YourStuff)/Jude/MixColors/paintstatus.gd" id="9_skyad"]
[ext_resource type="Script" uid="uid://cy82qqhq84v8m" path="res://Frameworks(YourStuff)/Jude/ShakeColors/cursor.gd" id="10_0ivd8"]
[ext_resource type="PackedScene" uid="uid://sgbw1mgo6pae" path="res://Frameworks(YourStuff)/Jude/MixColors/mixture.tscn" id="10_skyad"]
[ext_resource type="Texture2D" uid="uid://bahweix72qxss" path="res://Frameworks(YourStuff)/Jude/ShakeColors/box.png" id="11_hjchg"]
[ext_resource type="Texture2D" uid="uid://bi4qsrpi6pim3" path="res://Frameworks(YourStuff)/Jude/ShakeColors/rmb.png" id="13_v2gw7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_awanf"]
size = Vector2(529, 216.76631)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0ca4"]
size = Vector2(203.5, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_epali"]
size = Vector2(342.625, 143.25)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c6657"]
radius = 44.0
height = 166.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6657"]
size = Vector2(189, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hm6li"]
size = Vector2(430, 416.33234)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ignvr"]
size = Vector2(420, 219.24518)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7lmeg"]
size = Vector2(787, 313.625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0yrm1"]
size = Vector2(594.984, 167.02466)

[sub_resource type="CircleShape2D" id="CircleShape2D_epali"]

[node name="GameRoot" type="Node2D" unique_id=2067474409]
script = ExtResource("1_kfb5p")

[node name="Game" type="Node2D" parent="." unique_id=582359250]
script = ExtResource("2_utxgy")

[node name="Panel" type="Panel" parent="Game" unique_id=2005969969]
offset_left = 5.0
offset_top = 55.0
offset_right = 1150.0
offset_bottom = 646.0

[node name="Description" type="RichTextLabel" parent="Game" unique_id=47162102]
offset_left = -282.0
offset_top = -134.0
offset_right = 871.0
offset_bottom = 512.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 30
text = "to MixPaint!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rmb" type="Sprite2D" parent="Game/Description" unique_id=1360412771]
position = Vector2(397, 331.00003)
rotation = -0.3771902
scale = Vector2(0.22363043, 0.22363043)
texture = ExtResource("13_v2gw7")

[node name="TimerWords" type="RichTextLabel" parent="Game" unique_id=629589033]
offset_left = 385.0
offset_top = -164.0
offset_right = 1538.0
offset_bottom = 482.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 30
text = "Time Left: 
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="Control" parent="Game" unique_id=622439687]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 181.0
offset_top = 311.0
offset_right = 181.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6706062, 0.6706062)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_htx8l")

[node name="Smoke Grenade" type="Panel" parent="Game/UI" unique_id=889182355]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 333.0
offset_bottom = 343.0

[node name="BackPack" type="Sprite2D" parent="Game/UI/Smoke Grenade" unique_id=1565384838]
position = Vector2(163, 272)
scale = Vector2(0.49420103, 0.4942011)
texture = ExtResource("5_skyad")

[node name="mix" type="StaticBody2D" parent="Game/UI/Smoke Grenade" unique_id=1408560856]
position = Vector2(-7, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/UI/Smoke Grenade/mix" unique_id=1910814899]
position = Vector2(148.5, -100.38318)
shape = SubResource("RectangleShape2D_awanf")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/UI/Smoke Grenade/mix" unique_id=2013178147]
position = Vector2(167, 337.5)
shape = SubResource("RectangleShape2D_s0ca4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Game/UI/Smoke Grenade/mix" unique_id=1359388624]
position = Vector2(-9, 175)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_epali")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Game/UI/Smoke Grenade/mix" unique_id=24990095]
position = Vector2(343, 170)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_epali")

[node name="Mixer" type="CharacterBody2D" parent="Game/UI/Smoke Grenade/mix" unique_id=1869756323 groups=["interact"]]
position = Vector2(163, 163)
collision_layer = 4
script = ExtResource("6_kfb5p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/UI/Smoke Grenade/mix/Mixer" unique_id=796374572]
shape = SubResource("CapsuleShape2D_c6657")

[node name="Sprite2D" type="Sprite2D" parent="Game/UI/Smoke Grenade/mix/Mixer" unique_id=1063761292]
position = Vector2(15, -7)
scale = Vector2(0.16600262, 0.16600262)
texture = ExtResource("7_kinar")

[node name="MixingSFX" type="AudioStreamPlayer" parent="Game/UI/Smoke Grenade/mix/Mixer" unique_id=719795379]
stream = ExtResource("8_wcj5c")
volume_db = -20.378

[node name="MixLayer" type="Area2D" parent="Game/UI/Smoke Grenade/mix" unique_id=1844240672]
position = Vector2(163, 163)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/UI/Smoke Grenade/mix/MixLayer" unique_id=1294479636]
position = Vector2(1, 98)
shape = SubResource("RectangleShape2D_c6657")

[node name="TextureRect" type="TextureRect" parent="Game/UI/Smoke Grenade/mix" unique_id=613799021]
offset_left = 285.0
offset_top = 12.0
offset_right = 304.0
offset_bottom = 181.05344
script = ExtResource("9_skyad")

[node name="PaintHolder" type="VBoxContainer" parent="Game/UI/Smoke Grenade/mix/TextureRect" unique_id=642798136]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="progressmix" type="ProgressBar" parent="Game/UI/Smoke Grenade/mix" unique_id=219839097]
offset_left = 316.0
offset_top = 12.0
offset_right = 335.0
offset_bottom = 181.05344
max_value = 3.0
fill_mode = 3
show_percentage = false

[node name="mixtures" type="StaticBody2D" parent="Game/UI/Smoke Grenade" unique_id=1122440501]
position = Vector2(1107, 91)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/UI/Smoke Grenade/mixtures" unique_id=953220328]
position = Vector2(-24, -253.6662)
shape = SubResource("RectangleShape2D_hm6li")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/UI/Smoke Grenade/mixtures" unique_id=142327075]
position = Vector2(6, 303.8725)
shape = SubResource("RectangleShape2D_ignvr")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Game/UI/Smoke Grenade/mixtures" unique_id=1398731251]
position = Vector2(-326.1875, 51.5)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_7lmeg")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Game/UI/Smoke Grenade/mixtures" unique_id=1314085647]
position = Vector2(257.88733, 54.86432)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_0yrm1")

[node name="Mixture" parent="Game/UI/Smoke Grenade/mixtures" unique_id=610547170 instance=ExtResource("10_skyad")]
position = Vector2(-95.51851, 74.99541)
colorstart = Color(1, 0, 0, 1)

[node name="Mixture2" parent="Game/UI/Smoke Grenade/mixtures" unique_id=1084655402 instance=ExtResource("10_skyad")]
position = Vector2(22.285357, 127.18699)
rotation = -0.92347854
colorstart = Color(0, 0, 1, 1)

[node name="Mixture3" parent="Game/UI/Smoke Grenade/mixtures" unique_id=456567312 instance=ExtResource("10_skyad")]
position = Vector2(93.86238, 31.750956)
rotation = 0.84146106
colorstart = Color(1, 1, 0, 1)

[node name="Cursor" type="Area2D" parent="Game/UI" unique_id=132860936]
collision_layer = 8
collision_mask = 6
script = ExtResource("10_0ivd8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/UI/Cursor" unique_id=406427563]
shape = SubResource("CircleShape2D_epali")

[node name="Polygon2D" type="Polygon2D" parent="Game/UI/Cursor" unique_id=581841004]
color = Color(2.8878452e-07, 0.92667454, 0.600324, 1)
polygon = PackedVector2Array(0, -10, 7, -8, 10, -1, 8, 7, 0, 10, -7, 7, -10, -1, -6, -8)

[node name="PaintFinalLocation" type="Marker2D" parent="Game/UI" unique_id=1581444937]
position = Vector2(164, 50)

[node name="TextureRect" type="TextureRect" parent="Game/UI" unique_id=559297208]
z_index = -8
layout_mode = 0
offset_left = 799.0
offset_top = -97.0
offset_right = 1266.0
offset_bottom = 267.0
scale = Vector2(1.2332478, 1.2332478)
texture = ExtResource("11_hjchg")

[connection signal="start_game" from="." to="Game" method="_on_game_root_start_game"]
[connection signal="body_entered" from="Game/UI/Smoke Grenade/mix/MixLayer" to="Game/UI/Smoke Grenade/mix/TextureRect" method="_on_mix_layer_body_entered"]
